# SoccerAnalysisRenderingEngine

./: .gitignore  CMakeLists.txt  Engine.sln  Engine.vcxproj  Engine.vcxproj.filters  README.md  ResTempl.rct  imgui.ini
src/: Arrow.cpp  Arrow.hpp  Controller.cpp  Controller.hpp  GraphicObject.cpp  GraphicObject.hpp  Match.cpp  Match.hpp  Materials.hpp  Mesh.hpp  ModelLoader.cpp  ModelLoader.hpp  OffsideLine.cpp  OffsideLine.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  Player.cpp  Player.hpp  Shader.cpp  Shader.hpp  Team.cpp  Team.hpp  Videoloader.cpp  Videoloader.hpp  View.cpp  View.hpp  common.hpp  gui.cpp  gui.hpp  main.cpp  settings.hpp
src/shaders/: BackgroundTextures.frag  BackgroundTextures.vert  BackgroundTexturesBlend.frag  BackgroundTexturesBlend.vert  BackgroundTexturesShadow.frag  ShadowMapping.frag  ShadowMapping.vert  ShadowMappingDepth.frag  ShadowMappingDepth.vert  shadowMappingDebug.frag  shadowMappingDebug.vert
